fix sheet z-index

--- a/app/webpacker/stylesheets/index.scss
+++ b/app/webpacker/stylesheets/index.scss
@@ -87,7 +87,7 @@
 }
 
 .sheet {
-  z-index: 30;
+  z-index: 110;
 }
 
 .margin-0 {
